--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
             "@php artisan config:clear --ansi",
             "@php artisan test"
         ],
+        "serve-dev": "php -S 127.0.0.1:8000 -t public",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
